# WalletCrypto

./: .gitignore  Makefile  conftest.py  docker-compose.yml  entrypoint.sh  factories.py  propan_app.py  pyproject.toml
config/: base.py  database.py  rabbitmq.py
config_celery/: celery_app.py  celery_worker.py  tasks.py
config_fastapi/: fastapi_manager.py  main.py  settings.py
config_propan/: propan_app.py  propan_depends.py
config_socketio/: client.py  server.py  socket_application.py  socketcheck.py  socketio_example.py
deploy/apps/: Dockerfile
deploy/nginx/: nginx.conf
deploy/postgresql/: Dockerfile  init.sql
migrations/: env.py
migrations/versions/: 477407ddf4d2_init.py
src/authentication/: endpoints.py  exceptions.py  jwt.py  permissions.py  schemas.py  send_email.py  urls.py  views.py
src/authentication/tests/: test_auth.py
src/chats/: admin.py  endpoints.py  models.py  schemas.py  service.py  views.py
src/chats/asyncapi/: generator.py  html_fixer.py
src/chats/tests/: test_messages_get_create_delete_endpoints.py  test_messages_get_endpoints.py  test_send_message.py
src/core/: adminAuth.py  containers.py  routers.py  storage_bunny.py  upload_bunny.py
src/delivery/: admin.py  consumers.py  endpoints.py  models.py  schemas.py  service.py
src/email-templates/src/: success_registration.mjml
src/ibay/: admin.py  endpoints.py  models.py  schemas.py  service.py  views.py
src/ibay/tests/: test_ibay_endpoints.py
src/parser/: consumer.py  moralis_service.py  service.py  wallets_balance_parsing.py  web3_service.py
src/rabbitmq/: testrabbit.py
src/users/: admin.py  check_dependency.py  endpoints.py  models.py  schemas.py  service.py  validators.py  views.py
src/users/tests/: test_user.py
src/wallets/: admin.py  consumers.py  endpoints.py  models.py  schemas.py  service.py  views.py  web3_service.py
src/wallets/tests/: test_post_wallet_endpoints.py  test_wallet_get_endpoints.py
static/crypto/js/: auth.js  basic.js  chat.js  ibay.js  login.js  user_profile.js  wallet.js
templates/auth/: login.html  registration.html
templates/base/: basic.html
templates/chat/: chat.html
templates/ibay/: ibay.html
templates/user/: user_profile.html
templates/wallet/: wallets.html
